--- a/notebooks/01_tokenisation.ipynb
+++ b/notebooks/01_tokenisation.ipynb
@@ -103,8 +103,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e96a89b",
+   "metadata": {},
+   "source": [
+    "![](../images/tokenisation.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "f19526f2",
    "metadata": {},
    "outputs": [
@@ -114,7 +122,7 @@
        "['Les', 'modèles', 'de', 'langage', 'sont', 'fascinants.']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "27e313de",
    "metadata": {},
    "outputs": [
@@ -196,7 +204,7 @@
        " '.']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,84 +239,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe107bc3",
+   "metadata": {},
+   "source": [
+    "![](../images/tokenisation_illustration.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "b1f1a3d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "435ab018b5df4fde934244734c6ef24a",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "config.json:   0%|          | 0.00/570 [00:00<?, ?B/s]"
+       "['token', '##ization', 'is', 'computational', '##ly', 'fascinating', '.']"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "103dfa3e19394834994634ded8f52aea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82907c6d09514ed2a2cbfa76e1809f28",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ba46805d58546d2809215766be2388b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['token',\n",
-       " '##ization',\n",
-       " 'is',\n",
-       " 'a',\n",
-       " 'crucial',\n",
-       " 'step',\n",
-       " 'in',\n",
-       " 'natural',\n",
-       " 'language',\n",
-       " 'processing',\n",
-       " '.']"
-      ]
-     },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,32 +267,35 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
-    "text = \"Tokenization is a crucial step in natural language processing.\"\n",
+    "text = \"Tokenization is computationally fascinating.\"\n",
     "tokens = tokenizer.tokenize(text)\n",
     "tokens\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "25354840",
+   "id": "8688896f",
    "metadata": {},
    "source": [
-    "On observe que le texte est découpé en sous-unités, et non en mots stricts.\n"
+    "On observe que le texte est découpé en sous-unités, et non en mots stricts. \n",
+    "\n",
+    "De plus, le préfixe `##` indique que le token est une continuation d’un mot précédent.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "5e68fd8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[101, 19204, 3989, 2003, 1037, 10232, 3357, 1999, 3019, 2653, 6364, 1012, 102]"
+       "[101, 19204, 3989, 2003, 15078, 2135, 17160, 1012, 102]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "eae754e3",
    "metadata": {},
    "outputs": [
@@ -382,7 +335,7 @@
        "b'Prix : 199,99\\xe2\\x82\\xac \\xf0\\x9f\\x98\\x84'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "5ec46ba1",
    "metadata": {},
    "outputs": [
@@ -428,7 +381,7 @@
        " 132]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "3c9e2595",
    "metadata": {},
    "outputs": [
@@ -449,7 +402,7 @@
        "'Prix : 199,99€ 😄'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "1d7180a6",
    "metadata": {},
    "outputs": [
@@ -498,7 +451,7 @@
        " 'Ħ']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "a0b387d9",
    "metadata": {},
    "outputs": [
@@ -537,7 +490,7 @@
        " 226]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,64 +501,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa4ecf9",
+   "id": "3e707136",
    "metadata": {},
    "source": [
-    "## Reconstruction du texte"
+    "## Impact pratique de la tokenisation\n",
+    "\n",
+    "Les limites de contexte des LLM sont exprimées en nombre de tokens,\n",
+    "pas en nombre de mots ou de caractères.\n",
+    "\n",
+    "Deux textes de longueur similaire peuvent donc avoir des coûts très différents\n",
+    "selon leur tokenisation."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "72e79630",
+   "cell_type": "markdown",
+   "id": "4902e728",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['[CLS]',\n",
-       " 'token',\n",
-       " '##ization',\n",
-       " 'is',\n",
-       " 'a',\n",
-       " 'crucial',\n",
-       " 'step',\n",
-       " 'in',\n",
-       " 'natural',\n",
-       " 'language',\n",
-       " 'processing',\n",
-       " '.',\n",
-       " '[SEP]']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "tokenizer.convert_ids_to_tokens(token_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "915e7f7d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'[CLS] tokenization is a crucial step in natural language processing. [SEP]'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenizer.decode(token_ids)"
+    "____"
    ]
   },
   {
@@ -613,12 +526,27 @@
    "id": "433da02b",
    "metadata": {},
    "source": [
-    "## Comparaison de tokenizers"
+    "# Comparaison de tokenizers\n",
+    "\n",
+    "Tous les modèles de langage ne tokenisent pas le texte de la même manière.\n",
+    "Chaque modèle est entraîné avec un tokenizer spécifique, basé sur des choix\n",
+    "techniques différents (WordPiece, Byte-Level BPE, SentencePiece, etc.).\n",
+    "\n",
+    "Nous allons comparer trois tokenizers associés à des modèles populaires :\n",
+    "\n",
+    "- BERT (WordPiece)\n",
+    "- GPT-2 (Byte-Level BPE)\n",
+    "- XLM-RoBERTa (SentencePiece)\n",
+    "\n",
+    "L'objectif est d'observer :\n",
+    "- les différences de découpage,\n",
+    "- le nombre de tokens générés,\n",
+    "- l'impact des choix de tokenisation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "e86b630c",
    "metadata": {},
    "outputs": [
@@ -629,149 +557,11 @@
       "\n",
       "Tokenizer: bert-base-uncased\n",
       "['l', \"'\", 'international', '##isation', 'des', 'model', '##es', 'de', 'lang', '##age', 'est', 'complex', '##e', '.']\n",
-      "Nombre de tokens: 14\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc5960ec5e6144f9806027c242c54c84",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/665 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac4134d86a734e3c8a35b91c0c9f0e2c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/26.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d668566ca704f52971fe90cb55e989b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.json:   0%|          | 0.00/1.04M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1422424e7cff4127990032952324dfdc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9b0586df3c54f789970a455885e7ea5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nombre de tokens: 14\n",
       "\n",
       "Tokenizer: gpt2\n",
       "['L', \"'\", 'international', 'isation', 'Ġdes', 'Ġmod', 'Ã¨', 'les', 'Ġde', 'Ġlang', 'age', 'Ġest', 'Ġcomplex', 'e', '.']\n",
-      "Nombre de tokens: 15\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "909e9feb726940dc9d55276baa467082",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/615 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d132a22349c048bc9cceaf5551a8c080",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/25.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75ee348ab69e47b4a157ffae8df58d7f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "sentencepiece.bpe.model:   0%|          | 0.00/5.07M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83256eda8d844d0d8fd0321c43cb0799",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/9.10M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nombre de tokens: 15\n",
       "\n",
       "Tokenizer: xlm-roberta-base\n",
       "['▁L', \"'\", 'international', 'isation', '▁des', '▁modèles', '▁de', '▁lang', 'age', '▁est', '▁complexe', '.']\n",
@@ -797,16 +587,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edec28cb",
+   "id": "14f7981b",
    "metadata": {},
    "source": [
-    "## Impact pratique de la tokenisation\n",
+    "## 1. BERT (WordPiece)\n",
     "\n",
-    "Les limites de contexte des LLM sont exprimées en nombre de tokens,\n",
-    "pas en nombre de mots ou de caractères.\n",
+    "- Les sous-mots sont indiqués par le préfixe `##`.\n",
+    "- Exemple : \"internationalisation\" → \"international\" + \"##isation\".\n",
+    "- Les accents sont supprimés (modèles uncased).\n",
+    "- Le texte français est partiellement dégradé (\"modèles\" → \"model\" + \"##es\").\n",
     "\n",
-    "Deux textes de longueur similaire peuvent donc avoir des coûts très différents\n",
-    "selon leur tokenisation.\n"
+    "BERT est optimisé pour l'anglais, ce qui explique certaines approximations\n",
+    "sur le français.\n",
+    "\n",
+    "Nombre de tokens : 14\n",
+    "\n",
+    "\n",
+    "## 2. GPT-2 (Byte-Level BPE)\n",
+    "\n",
+    "- Les espaces sont encodés avec le symbole `Ġ`.\n",
+    "- Les caractères accentués sont décomposés en bytes (\"modèles\" → \"Ã¨\").\n",
+    "- Le modèle fonctionne au niveau des bytes, ce qui garantit une couverture universelle.\n",
+    "\n",
+    "GPT-2 n'a pas été spécifiquement entraîné pour le français,\n",
+    "ce qui explique certains découpages peu naturels.\n",
+    "\n",
+    "Nombre de tokens : 15\n",
+    "\n",
+    "\n",
+    "## 3. XLM-RoBERTa (SentencePiece)\n",
+    "\n",
+    "- Le symbole `▁` représente un espace.\n",
+    "- Les mots français sont mieux conservés (\"modèles\", \"complexe\").\n",
+    "- Le modèle est multilingue, ce qui améliore la tokenisation du français.\n",
+    "\n",
+    "Nombre de tokens : 12\n"
    ]
   },
   {
@@ -819,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "4cfd41da",
    "metadata": {},
    "outputs": [
@@ -828,13 +643,13 @@
      "output_type": "stream",
      "text": [
       "ChatGPTification ultra-méta-quantique\n",
-      "['chat', '##gp', '##ti', '##fication', 'ultra', '-', 'meta', '-', 'quan', '##tique']\n",
+      "['Chat', 'G', 'PT', 'ification', 'Ġultra', '-', 'm', 'Ã©', 'ta', '-', 'quant', 'ique']\n",
       "\n",
       "Prix : 199,99€ 😄\n",
-      "['prix', ':', '199', ',', '99', '##€', '[UNK]']\n",
+      "['P', 'rix', 'Ġ:', 'Ġ199', ',', '99', 'âĤ¬', 'ĠðŁĺ', 'Ħ']\n",
       "\n",
       "anticonstitutionnellement\n",
-      "['anti', '##con', '##sti', '##tu', '##tion', '##nell', '##ement']\n",
+      "['ant', 'icon', 'st', 'itution', 'nel', 'lement']\n",
       "\n"
      ]
     }
@@ -854,10 +669,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96a8f2de",
+   "metadata": {},
+   "source": [
+    "Ces exemples illustrent plusieurs propriétés importantes du tokenizer GPT-2 :\n",
+    "\n",
+    "1. Les mots inconnus ou néologismes sont découpés en sous-unités connues.\n",
+    "2. Les caractères accentués, symboles et emojis sont représentés via un encodage byte-level.\n",
+    "3. Les mots longs sont segmentés en fragments morphologiques fréquents.\n",
+    "\n",
+    "Cela montre que la tokenisation moderne vise un compromis entre :\n",
+    "- robustesse universelle (via les bytes),\n",
+    "- efficacité du vocabulaire,\n",
+    "- capacité de généralisation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a4347cb",
+   "metadata": {},
+   "source": [
+    "____"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3d66ed14",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "# Conclusion\n",
     "\n",
     "La tokenisation est une étape fondamentale dans les LLM.\n",
     "Elle conditionne la représentation du texte, la longueur des séquences,\n",
@@ -866,6 +706,12 @@
     "Comprendre la tokenisation, c’est comprendre comment un modèle de langage\n",
     "lit réellement le langage humain.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4218edb2",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
