--- a/notebooks/01_tokenisation.ipynb
+++ b/notebooks/01_tokenisation.ipynb
@@ -510,7 +510,97 @@
     "pas en nombre de mots ou de caractères.\n",
     "\n",
     "Deux textes de longueur similaire peuvent donc avoir des coûts très différents\n",
-    "selon leur tokenisation."
+    "selon leur tokenisation.\n",
+    "\n",
+    "Les modèles OpenAI utilisent un tokenizer spécifique optimisé pour leurs modèles.\n",
+    "La bibliothèque `tiktoken` permet de reproduire exactement la tokenisation\n",
+    "utilisée en production.\n",
+    "\n",
+    "Cela permet notamment :\n",
+    "- de compter précisément le nombre de tokens,\n",
+    "- d'estimer le coût d'une requête API,\n",
+    "- de vérifier la compatibilité avec la limite de contexte.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "49960310",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: Every moment is a beginning\n",
+      "Token ids: [15745, 4205, 382, 261, 10526]\n",
+      "Number of tokens: 5\n",
+      "Decoded text: Every moment is a beginning\n",
+      "Nombre de mots: 5\n",
+      "Nombre de caractères: 27\n",
+      "Estimation du coût (exemple fictif) : $0.00077500\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tiktoken\n",
+    "\n",
+    "# Charger le tokenizer associé au modèle\n",
+    "tokenizer = tiktoken.encoding_for_model(\"gpt-4o\")\n",
+    "\n",
+    "# Exemple de texte à tokeniser\n",
+    "sample_text = \"Every moment is a beginning\"\n",
+    "\n",
+    "# Tokeniser le texte\n",
+    "token_ids = tokenizer.encode(sample_text)\n",
+    "\n",
+    "# Afficher les résultats\n",
+    "print(\"Text:\", sample_text)\n",
+    "print(\"Token ids:\", token_ids)\n",
+    "print(\"Number of tokens:\", len(token_ids))\n",
+    "\n",
+    "# Décoder les tokens pour vérifier la correspondance avec le texte original\n",
+    "decoded_text = tokenizer.decode(token_ids)\n",
+    "print(\"Decoded text:\", decoded_text)\n",
+    "\n",
+    "print(\"Nombre de mots:\", len(sample_text.split()))\n",
+    "print(\"Nombre de caractères:\", len(sample_text))\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# Estimation du coût (exemple pédagogique concret)\n",
+    "# -------------------------------------------------------\n",
+    "\n",
+    "# Supposons un tarif fictif mais réaliste :\n",
+    "# 5 $ par million de tokens en entrée\n",
+    "# 15 $ par million de tokens en sortie\n",
+    "\n",
+    "price_input_per_million = 5.0\n",
+    "price_output_per_million = 15.0\n",
+    "\n",
+    "input_tokens = len(token_ids)\n",
+    "output_tokens = 50  # Supposons que le modèle génère 50 tokens en réponse\n",
+    "\n",
+    "estimated_cost = (\n",
+    "    (input_tokens / 1_000_000) * price_input_per_million\n",
+    "    + (output_tokens / 1_000_000) * price_output_per_million\n",
+    ")\n",
+    "\n",
+    "print(f\"Estimation du coût (exemple fictif) : ${estimated_cost:.8f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "821ddc47",
+   "metadata": {},
+   "source": [
+    "Ici : \n",
+    "- Le texte est converti en une séquence d'identifiants numériques.\n",
+    "- Chaque identifiant correspond à un token du vocabulaire du modèle.\n",
+    "- Le nombre de tokens n'est pas nécessairement égal au nombre de mots.\n",
+    "\n",
+    "Les API de modèles de langage facturent généralement au nombre de tokens.\n",
+    "Nous illustrons ici une estimation de coût en utilisant un exemple tarifaire fictif\n",
+    "(les prix réels dépendent du modèle et peuvent évoluer)."
    ]
   },
   {
